--- a/package.json
+++ b/package.json
@@ -10,10 +10,31 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.3",
+    "@react-native-community/viewpager": "^4.2.2",
+    "@react-native-masked-view/masked-view": "^0.2.0",
+    "axios": "^0.21.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
+    "pure-bind": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^17.0.1",
     "react-native": "npm:react-native-tvos@0.63.3-0",
-    "react-native-web": "^0.14.10"
+    "react-native-device-info": "^8.0.1",
+    "react-native-elements": "^3.1.0",
+    "react-native-orientation": "^3.1.3",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.17.1",
+    "react-native-shimmer-placeholder": "^2.0.6",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-static-safe-area-insets": "^2.1.1",
+    "react-native-vector-icons": "^8.0.0",
+    "react-native-web": "^0.14.10",
+    "redux": "^4.0.5",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
