--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.3",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.2.2",
-    "@react-native-masked-view/masked-view": "^0.2.0",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
@@ -42,6 +44,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^26.0.20",
     "@types/react-native": "^0.63.46",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-test-renderer": "^17.0.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
