--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-static-safe-area-insets": "^2.1.1",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "^0.14.10",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "rxjs": "^6.6.3"
   },
@@ -43,9 +44,12 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/react-native": "^0.63.46",
     "@types/react-native-snap-carousel": "^3.8.2",
+    "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.0",
+    "axios-logger": "^2.5.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
