--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-static-safe-area-insets": "^2.1.1",
     "react-native-vector-icons": "^8.0.0",
+    "react-native-video": "^5.1.1",
     "react-native-web": "^0.14.10",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
@@ -46,7 +47,9 @@
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/react-native": "^0.63.46",
+    "@types/react-native-orientation": "^5.0.1",
     "@types/react-native-snap-carousel": "^3.8.2",
+    "@types/react-native-video": "^5.0.3",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.0",
     "axios-logger": "^2.5.0",
